# Capstone1_2021Spring

./: .gitignore  README.md
autocontrol/: CMakeLists.txt  package.xml
autocontrol/msg/: motion.msg
autocontrol/src/: autodriving.cpp
ball_approach/: CMakeLists.txt  package.xml
ball_approach/src/: ball_approach.cpp
ball_detection/src/: ball_detect.cpp
coppeliasim_models/: 5_18_4.ttm  5_19_4.ttm  F_5_6_4.ttm  F_5_6_4_kinect.ttm  Final_model_6_02_from start.ttm  Final_model_v4.ttm  Final_model_v5.ttm  Final_model_v6.ttm  Final_model_v7.ttm  Final_model_v8.ttm  Final_model_with_gripper_limit_increase.ttm  Final_model_with_gripper_limit_increase_from start.ttm  Final_testmodel_v1.ttm  Final_testmodel_v2.ttm  ball_detecting_test.ttt  map_ver3.ttt  map_ver3_practice11.ttt  map_ver3_practice13.ttt  map_ver3_practice_goal_scoring_from_12.ttt  map_ver3_with_model_4.ttt  map_ver3_with_model_F.ttt  robot_for_line_tracing3.ttm
coppeliasim_models/5_6_4/: 5_6_4luascript.txt  CMakeLists.txt  package.xml
coppeliasim_models/5_6_4/config/: joint_names_5_6_4.yaml
coppeliasim_models/5_6_4/launch/: display.launch  gazebo.launch
coppeliasim_models/5_6_4/meshes/: GripperArm.STL  GripperMain.STL  LRWheel.STL  RFWheel.STL  RRWheel.STL
coppeliasim_models/5_6_4/urdf/: 5_6_4.csv  5_6_4.urdf
core_msgs/: CMakeLists.txt
core_msgs/msg/: dist_center.msg  plane_info.msg
data_integrate/launch/: system_run.launch
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/amcl/: AMCLConfig.h
devel/include/core_msgs/: ball_position.h  dist_center.h  multiarray.h
devel/lib/amcl/: amcl
devel/lib/ball_detection/: ball_detect_node
devel/lib/data_integrate/: data_integation_node  data_show_node
devel/lib/line_tracing/: line_tracing_node
devel/lib/map_server/: map_saver  map_server  rtest
devel/lib/pkgconfig/: amcl.pc  ball_detection.pc  core_msgs.pc  data_integrate.pc  line_tracing.pc  map_server.pc  robot_teleop.pc
devel/lib/python3/dist-packages/amcl/cfg/: AMCLConfig.py
devel/lib/python3/dist-packages/core_msgs/msg/: __init__.py  _ball_position.py  _dist_center.py  _multiarray.py
devel/lib/python3/dist-packages/robot_teleop/: __init__.py
devel/lib/robot_teleop/: obstacle_climb  wheel_teleop_cam2  wheel_teleop_key2
devel/share/amcl/cmake/: amclConfig.cmake
devel/share/ball_detection/cmake/: ball_detectionConfig.cmake
devel/share/common-lisp/ros/core_msgs/msg/: _package.lisp  _package_dist_center.lisp  ball_position.lisp  core_msgs-msg.asd  dist_center.lisp  multiarray.lisp
devel/share/core_msgs/cmake/: core_msgs-msg-paths.cmake  core_msgsConfig.cmake
devel/share/data_integrate/cmake/: data_integrateConfig.cmake
devel/share/gennodejs/ros/core_msgs/msg/: _index.js  ball_position.js  dist_center.js  multiarray.js
devel/share/line_tracing/cmake/: line_tracingConfig.cmake
devel/share/map_server/cmake/: map_serverConfig.cmake
devel/share/robot_teleop/cmake/: robot_teleopConfig.cmake
devel/share/roseus/ros/core_msgs/: manifest.l
devel/share/roseus/ros/core_msgs/msg/: ball_position.l  dist_center.l  multiarray.l
goal_scoring/: CMakeLists.txt  package.xml
goal_scoring/src/: goal_scoring.cpp
line_distance/: CMakeLists.txt  package.xml
line_distance/launch/: line_distance.launch
line_distance/src/: line_distance.cpp
line_tracing/: CMakeLists.txt  package.xml
line_tracing/launch/: line_tracing.launch
line_tracing/src/: line_tracing.cpp
localization/: CMakeLists.txt  package.xml
localization/msg/: multi_position.msg  obstacle.msg  robot_position.msg
localization/src/: localization.cpp
path_plan/: CMakeLists.txt  package.xml
path_plan/msg/: mode.msg  operation.msg
path_plan/src/: path_plan.cpp
path_practice/: CMakeLists.txt  package.xml
path_practice/src/: path_practice.cpp  path_practice2.cpp
robot_teleop/: CMakeLists.txt  package.xml
robot_teleop/launch/: obstacle_climb.launch  wheel_teleop_cam2.launch
robot_teleop/scripts/: obstacle_climb  wheel_teleop_auto  wheel_teleop_cam2  wheel_teleop_key2
src/amcl/src/: amcl_node.cpp
src/ball_detection/: CMakeLists.txt  package.xml
src/ball_detection/src/: ball_detect.cpp
src/coppeliasim_models/: map_ver3.ttt  map_ver3_practice9.ttt  map_ver4.ttt  my_robot_ver5.ttm  my_robot_ver6.ttm  simple_robot_ver1.ttm  simple_robot_ver2.ttm
src/core_msgs/msg/: dist_center.msg
src/line_tracing/src/: line_tracing.cpp
src/map_server/rosMap/: .MakeROSMap2.py.swp  KEC_BuildingCorrected.pgm  MakeROSMap.py  ros_map.yaml
src/robot_teleop/: CMakeLists.txt
src/robot_teleop/scripts/: obstacle_climb  wheel_teleop_cam  wheel_teleop_cam2  wheel_teleop_key  wheel_teleop_key2
