<?xml version="1.0"?>
<package format="2">
  <name>localization</name>
  <version>1.0.0</version>
  <description>Localization with Lidar data</description>

  <maintainer email="stkimjh@kaist.ac.kr">ME492</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>

  </export>
</package>
